--- a/Conferenceware/Web.config
+++ b/Conferenceware/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!-- 
     Note: As an alternative to hand editing this file you can use the 
     web admin tool to configure settings for your application. Use
@@ -26,7 +26,10 @@
   <appSettings/>
 
   <connectionStrings>
-    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
+    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true"
+      providerName="System.Data.SqlClient" />
+    <add name="ConferencewareConnectionString" connectionString="Data Source=ECHO;Initial Catalog=Conferenceware;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <system.web>
@@ -160,7 +163,6 @@
     </compilers>
   </system.codedom>
 
-  <system.web.extensions/>
 
   <!-- 
         The system.webServer section is required for running ASP.NET AJAX under Internet
