--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Web.Mobile" />
+    <Reference Include="xVal, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f8fbed92c68c4006, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AccountController.cs" />
@@ -71,6 +72,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="Content\jquery-1.4.1-dev.js" />
+    <Content Include="Content\jquery-1.4.1.js" />
+    <Content Include="Content\xVal.AspNetNative.js" />
+    <Content Include="Content\xVal.jquery.validate.js" />
+    <Content Include="Libraries\xVal.dll" />
+    <Content Include="Libraries\xVal.license.txt" />
     <Content Include="Web.config" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\jquery-1.3.2.js" />
