makin it good and go (and removing unneeded usings)

--- a/Conferenceware.Tests/Conferenceware.Tests.csproj
+++ b/Conferenceware.Tests/Conferenceware.Tests.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\TestRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Controllers\AccountControllerTest.cs" />
@@ -66,9 +67,6 @@
       <Project>{2CBE9479-CAAA-4A28-828F-180E876D53CC}</Project>
       <Name>Conferenceware</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
