--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -82,6 +82,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Conferenceware.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Models\ConferencewareRepository.cs" />
     <Compile Include="Models\Event.cs" />
     <Compile Include="Models\IRepository.cs" />
     <Compile Include="Models\Location.cs" />
