cleaned up some code
working on validation tests for location; currently the range isn't being observed

--- a/Conferenceware.Tests/Conferenceware.Tests.csproj
+++ b/Conferenceware.Tests/Conferenceware.Tests.csproj
@@ -54,7 +54,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\RepositoryLocation.cs" />
+    <Compile Include="Models\LocationTests.cs" />
+    <Compile Include="Models\RepositoryLocationTests.cs" />
     <Compile Include="Models\TestRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
