--- a/Conferenceware.Tests/Conferenceware.Tests.csproj
+++ b/Conferenceware.Tests/Conferenceware.Tests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Controllers\LocationControllerTests.cs" />
     <Compile Include="Models\LocationTests.cs" />
     <Compile Include="Models\RepositoryLocationTests.cs" />
+    <Compile Include="Models\RepositoryTimeSlotTests.cs" />
     <Compile Include="Models\TestRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
