--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -77,6 +77,7 @@
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\Attendee.cs" />
+    <Compile Include="Models\AttendeeEditData.cs" />
     <Compile Include="Models\Conferenceware.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
