--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -148,6 +148,9 @@
       <DependentUpon>Conferenceware.dbml</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\Attendee\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v9.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
