Use (local) for database

--- a/Conferenceware/Web.config
+++ b/Conferenceware/Web.config
@@ -23,8 +23,8 @@
 	</configSections>
 	<appSettings/>
 	<connectionStrings>
-		<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
-		<add name="ConferencewareConnectionString" connectionString="Data Source=ECHO;Initial Catalog=Conferenceware;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
+		<add name="ConferencewareConnectionString" connectionString="Data Source=(local);Initial Catalog=Conferenceware;Integrated Security=True" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<system.web>
 		<!-- 
