made attendees work generally. validation really isn't happening though (on the server side)

--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\Attendee.cs" />
     <Compile Include="Models\AttendeeEditData.cs" />
+    <Compile Include="Models\AttendeeMetadata.cs" />
     <Compile Include="Models\Conferenceware.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -111,6 +112,7 @@
     <Content Include="Libraries\xVal.dll" />
     <Content Include="Libraries\xVal.license.txt" />
     <Content Include="Views\Attendee\Create.aspx" />
+    <Content Include="Views\Attendee\Edit.aspx" />
     <Content Include="Views\Attendee\Index.aspx" />
     <Content Include="Views\Event\Create.aspx" />
     <Content Include="Views\Event\Details.aspx" />
