Added missing view. also tried upgrading to mvc v2 RTM. it fixed some of the binding things (possibly all, but untested). will update the rest of things to use built in binders later

--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -119,6 +119,7 @@
     <Content Include="Views\Attendee\Index.aspx" />
     <Content Include="Views\Event\Create.aspx" />
     <Content Include="Views\Event\Edit.aspx" />
+    <Content Include="Views\Event\EventNotFound.aspx" />
     <Content Include="Views\Event\Index.aspx" />
     <Content Include="Views\Food\Create.aspx" />
     <Content Include="Views\Food\Edit.aspx" />
