--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Models\EventMetadata.cs" />
     <Compile Include="Models\Food.cs" />
     <Compile Include="Models\FoodMetadata.cs" />
+    <Compile Include="Models\FrontpageSettings.cs" />
     <Compile Include="Models\IRepository.cs" />
     <Compile Include="Models\Location.cs" />
     <Compile Include="Models\LocationMetadata.cs" />
@@ -105,6 +106,11 @@
     <Compile Include="Models\TShirtSize.cs" />
     <Compile Include="Models\TShirtSizeMetadata.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Settings.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
@@ -125,6 +131,8 @@
     <Content Include="Views\Food\Create.aspx" />
     <Content Include="Views\Food\Edit.aspx" />
     <Content Include="Views\Food\Index.aspx" />
+    <Content Include="Views\Home\Admin.aspx" />
+    <Content Include="Views\Home\Index.aspx" />
     <Content Include="Views\Location\Create.aspx" />
     <Content Include="Views\Location\Edit.aspx" />
     <Content Include="Views\Location\Index.aspx" />
@@ -164,7 +172,6 @@
     <Content Include="Views\Account\LogOn.aspx" />
     <Content Include="Views\Account\Register.aspx" />
     <Content Include="Views\Home\About.aspx" />
-    <Content Include="Views\Home\Index.aspx" />
     <Content Include="Views\Shared\Error.aspx" />
     <Content Include="Views\Shared\LogOnUserControl.ascx" />
     <Content Include="Views\Shared\Site.Master" />
@@ -185,6 +192,12 @@
     <None Include="Models\Conferenceware.dbml.layout">
       <DependentUpon>Conferenceware.dbml</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Settings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v9.0\WebApplications\Microsoft.WebApplication.targets" />
