updated resx to be more descriptive in comments
updated edit to support adding speakers

NOTE: when creating the edit data, there is essentially an inefficient implementation of Except (a linq method). It's inefficient since it aggressively gets everything into a list first. It is there because Except will infinitely loop since it _will not_ use any defined comparitors. Just use it unless you can find a better method that actually works

--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Models\PeopleMetadata.cs" />
     <Compile Include="Models\SettingsData.cs" />
     <Compile Include="Models\Speaker.cs" />
+    <Compile Include="Models\SpeakerComparitor.cs" />
     <Compile Include="Models\TimeSlot.cs" />
     <Compile Include="Models\TimeSlotMetadata.cs" />
     <Compile Include="Models\TShirtSize.cs" />
@@ -127,6 +128,7 @@
     <Content Include="Views\Attendee\Edit.aspx" />
     <Content Include="Views\Attendee\Index.aspx" />
     <Content Include="Views\Event\Create.aspx" />
+    <Content Include="Views\Event\Details.aspx" />
     <Content Include="Views\Event\Edit.aspx" />
     <Content Include="Views\Event\EventNotFound.aspx" />
     <Content Include="Views\Event\Index.aspx" />
