updated schema and only schema to support company actions. you should run generate_database.sql again after killing and recreating the database

--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -142,6 +142,7 @@
     <Content Include="Views\Location\Index.aspx" />
     <Content Include="Views\Location\LocationNotFound.aspx" />
     <Content Include="Views\Schedule\Details.aspx" />
+    <Content Include="Views\Schedule\EventNotFound.aspx" />
     <Content Include="Views\Schedule\Index.aspx" />
     <Content Include="Views\Settings\Index.aspx" />
     <Content Include="Views\Speaker\Create.aspx" />
