crud works for companies. the only way to add company people, invoices, and payments will be from the company details view (almost set up; i think there's a bug there right now)

--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -132,6 +132,10 @@
     <Content Include="Views\Attendee\Edit.aspx" />
     <Content Include="Views\Attendee\Index.aspx" />
     <Content Include="Views\Company\CompanyNotFound.aspx" />
+    <Content Include="Views\Company\Create.aspx" />
+    <Content Include="Views\Company\Details.aspx" />
+    <Content Include="Views\Company\Edit.aspx" />
+    <Content Include="Views\Company\Index.aspx" />
     <Content Include="Views\Event\Create.aspx" />
     <Content Include="Views\Event\Details.aspx" />
     <Content Include="Views\Event\Edit.aspx" />
