--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AttendeeController.cs" />
     <Compile Include="Controllers\CompanyController.cs" />
+    <Compile Include="Controllers\CompanyPersonController.cs" />
     <Compile Include="Controllers\EventController.cs" />
     <Compile Include="Controllers\FoodController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -87,6 +88,8 @@
     <Compile Include="Models\Company.cs" />
     <Compile Include="Models\CompanyInvoice.cs" />
     <Compile Include="Models\CompanyMetadata.cs" />
+    <Compile Include="Models\CompanyPerson.cs" />
+    <Compile Include="Models\CompanyPersonMetadata.cs" />
     <Compile Include="Models\Conferenceware.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -131,7 +134,10 @@
     <Content Include="Views\Attendee\Create.aspx" />
     <Content Include="Views\Attendee\Edit.aspx" />
     <Content Include="Views\Attendee\Index.aspx" />
-    <Content Include="Views\Company\CompanyNotFound.aspx" />
+    <Content Include="Views\CompanyPerson\CompanyPersonNotFound.aspx" />
+    <Content Include="Views\CompanyPerson\Create.aspx" />
+    <Content Include="Views\CompanyPerson\Edit.aspx" />
+    <Content Include="Views\Shared\CompanyNotFound.aspx" />
     <Content Include="Views\Company\Create.aspx" />
     <Content Include="Views\Company\Details.aspx" />
     <Content Include="Views\Company\Edit.aspx" />
