--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AttendeeController.cs" />
     <Compile Include="Controllers\CompanyController.cs" />
+    <Compile Include="Controllers\CompanyPaymentController.cs" />
     <Compile Include="Controllers\CompanyPersonController.cs" />
     <Compile Include="Controllers\EventController.cs" />
     <Compile Include="Controllers\FoodController.cs" />
@@ -88,6 +89,8 @@
     <Compile Include="Models\Company.cs" />
     <Compile Include="Models\CompanyInvoice.cs" />
     <Compile Include="Models\CompanyMetadata.cs" />
+    <Compile Include="Models\CompanyPayment.cs" />
+    <Compile Include="Models\CompanyPaymentMetadata.cs" />
     <Compile Include="Models\CompanyPerson.cs" />
     <Compile Include="Models\CompanyPersonMetadata.cs" />
     <Compile Include="Models\Conferenceware.designer.cs">
@@ -134,6 +137,9 @@
     <Content Include="Views\Attendee\Create.aspx" />
     <Content Include="Views\Attendee\Edit.aspx" />
     <Content Include="Views\Attendee\Index.aspx" />
+    <Content Include="Views\CompanyPayment\CompanyPaymentNotFound.aspx" />
+    <Content Include="Views\CompanyPayment\Create.aspx" />
+    <Content Include="Views\CompanyPayment\Edit.aspx" />
     <Content Include="Views\CompanyPerson\CompanyPersonNotFound.aspx" />
     <Content Include="Views\CompanyPerson\Create.aspx" />
     <Content Include="Views\CompanyPerson\Edit.aspx" />
