--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AttendeeController.cs" />
     <Compile Include="Controllers\CompanyController.cs" />
+    <Compile Include="Controllers\CompanyInvoiceController.cs" />
     <Compile Include="Controllers\CompanyPaymentController.cs" />
     <Compile Include="Controllers\CompanyPersonController.cs" />
     <Compile Include="Controllers\EventController.cs" />
@@ -88,6 +89,8 @@
     <Compile Include="Models\AttendeeMetadata.cs" />
     <Compile Include="Models\Company.cs" />
     <Compile Include="Models\CompanyInvoice.cs" />
+    <Compile Include="Models\CompanyInvoiceItem.cs" />
+    <Compile Include="Models\CompanyInvoiceMetadata.cs" />
     <Compile Include="Models\CompanyMetadata.cs" />
     <Compile Include="Models\CompanyPayment.cs" />
     <Compile Include="Models\CompanyPaymentMetadata.cs" />
@@ -137,6 +140,8 @@
     <Content Include="Views\Attendee\Create.aspx" />
     <Content Include="Views\Attendee\Edit.aspx" />
     <Content Include="Views\Attendee\Index.aspx" />
+    <Content Include="Views\CompanyInvoice\CompanyInvoiceNotFound.aspx" />
+    <Content Include="Views\CompanyInvoice\Edit.aspx" />
     <Content Include="Views\CompanyPayment\CompanyPaymentNotFound.aspx" />
     <Content Include="Views\CompanyPayment\Create.aspx" />
     <Content Include="Views\CompanyPayment\Edit.aspx" />
