vol time slot crud works

--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Controllers\SpeakerController.cs" />
     <Compile Include="Controllers\TimeSlotController.cs" />
     <Compile Include="Controllers\TShirtSizeController.cs" />
+    <Compile Include="Controllers\VolunteerTimeSlotController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -123,6 +124,9 @@
     <Compile Include="Models\TimeSlotMetadata.cs" />
     <Compile Include="Models\TShirtSize.cs" />
     <Compile Include="Models\TShirtSizeMetadata.cs" />
+    <Compile Include="Models\VolunteerTimeSlot.cs" />
+    <Compile Include="Models\VolunteerTimeSlotEditData.cs" />
+    <Compile Include="Models\VolunteerTimeSlotMetadata.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -188,6 +192,9 @@
     <Content Include="Views\TShirtSize\Edit.aspx" />
     <Content Include="Views\TShirtSize\Index.aspx" />
     <Content Include="Views\TShirtSize\TShirtSizeNotFound.aspx" />
+    <Content Include="Views\VolunteerTimeSlot\Create.aspx" />
+    <Content Include="Views\VolunteerTimeSlot\Index.aspx" />
+    <Content Include="Views\VolunteerTimeSlot\VolunteerTimeSlotNotFound.aspx" />
     <Content Include="Web.config" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\jquery-1.3.2.js" />
