--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Controllers\TimeSlotController.cs" />
     <Compile Include="Controllers\TShirtSizeController.cs" />
     <Compile Include="Controllers\VolunteerController.cs" />
+    <Compile Include="Controllers\VolunteerTimeSlotController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -118,10 +119,10 @@
     <Compile Include="Models\IRepository.cs" />
     <Compile Include="Models\Location.cs" />
     <Compile Include="Models\LocationMetadata.cs" />
-    <Compile Include="Models\MechmaniaTeam.cs" />
+    <Compile Include="Models\MechManiaTeam.cs" />
     <Compile Include="Models\MechManiaTeamAdminEditData.cs" />
     <Compile Include="Models\MechmaniaTeamEditData.cs" />
-    <Compile Include="Models\MechmaniaTeamMetadata.cs" />
+    <Compile Include="Models\MechManiaTeamMetadata.cs" />
     <Compile Include="Models\People.cs" />
     <Compile Include="Models\PeopleMetadata.cs" />
     <Compile Include="Models\SettingsData.cs" />
@@ -134,6 +135,9 @@
     <Compile Include="Models\Volunteer.cs" />
     <Compile Include="Models\VolunteerEditData.cs" />
     <Compile Include="Models\VolunteerMetadata.cs" />
+    <Compile Include="Models\VolunteerTimeSlot.cs" />
+    <Compile Include="Models\VolunteerTimeSlotEditData.cs" />
+    <Compile Include="Models\VolunteerTimeSlotMetadata.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -142,6 +146,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Views\VolunteerTimeSlot\Create.aspx" />
+    <Content Include="Views\VolunteerTimeSlot\VolunteerTimeSlotNotFound.aspx" />
+    <Content Include="Views\VolunteerTimeSlot\Index.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Content\jquery-1.4.1-dev.js" />
     <Content Include="Content\jquery-1.4.1.js" />
@@ -159,6 +166,10 @@
     <Content Include="Views\CompanyInvoiceItem\Create.aspx" />
     <Content Include="Views\MechmaniaRegistration\Index.aspx" />
     <Content Include="Views\MechmaniaRegistration\Success.aspx" />
+    <Content Include="Views\MechManiaTeam\Create.aspx" />
+    <Content Include="Views\MechManiaTeam\Edit.aspx" />
+    <Content Include="Views\MechManiaTeam\Index.aspx" />
+    <Content Include="Views\MechManiaTeam\MechManiaTeamNotFound.aspx" />
     <Content Include="Views\Shared\CompanyInvoiceNotFound.aspx" />
     <Content Include="Views\CompanyInvoice\Delete.aspx" />
     <Content Include="Views\CompanyInvoice\Edit.aspx" />
