Everything seems to be working in the admin interface; only light testing done though
fixes #105

--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -215,6 +215,7 @@
     <Content Include="Views\TShirtSize\Index.aspx" />
     <Content Include="Views\TShirtSize\TShirtSizeNotFound.aspx" />
     <Content Include="Views\Volunteer\Create.aspx" />
+    <Content Include="Views\Volunteer\Edit.aspx" />
     <Content Include="Views\Volunteer\Index.aspx" />
     <Content Include="Views\Volunteer\VolunteerNotFound.aspx" />
     <Content Include="Web.config" />
