added link to volunteer admin page
added files and tested for public volunteer registration

updated master to have link to volunteer registration

fixes #104

--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Controllers\TimeSlotController.cs" />
     <Compile Include="Controllers\TShirtSizeController.cs" />
     <Compile Include="Controllers\VolunteerController.cs" />
+    <Compile Include="Controllers\VolunteerRegistrationController.cs" />
     <Compile Include="Controllers\VolunteerTimeSlotController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -146,6 +147,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Views\VolunteerRegistration\Index.aspx" />
+    <Content Include="Views\VolunteerRegistration\Success.aspx" />
     <Content Include="Views\VolunteerTimeSlot\Create.aspx" />
     <Content Include="Views\VolunteerTimeSlot\VolunteerTimeSlotNotFound.aspx" />
     <Content Include="Views\VolunteerTimeSlot\Index.aspx" />
