Crud operations seem to be working. also routes do what is expected, though not sure if it will link right. all links are being ignored right now; will check on that and close the routes and links at the same time when they are known to be right
fixes #95
refs #96, #97

--- a/Conferenceware/Conferenceware.csproj
+++ b/Conferenceware/Conferenceware.csproj
@@ -152,8 +152,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Views\PageManager\Create.aspx" />
     <Content Include="Views\PageManager\Delete.aspx" />
     <Content Include="Views\PageManager\Details.aspx" />
+    <Content Include="Views\PageManager\Edit.aspx" />
     <Content Include="Views\PageManager\Index.aspx" />
     <Content Include="Views\Page\Display.aspx" />
     <Content Include="Views\Shared\PageNotFound.aspx" />
